# simple-projects

./: .gitignore  README.md
Chip8Emulator/: Chip8.cs  Chip8Emulator.csproj  Chip8Emulator.sln  Display.Designer.cs  Display.cs  Program.cs
LearnVulkan/: CMakeLists.txt  main.cpp
LearningRendering/: CMakelists.txt  display.h  display_win.cpp  main.cpp  triangle.hlsl  triangle.ps.hlsl  triangle.vs.hlsl  viddriver.h  viddriver_d3d11.cpp  viddriver_d3d12.cpp  window.h  window_win.cpp
diskrepository/: CMakeLists.txt  diskrepository.h  main.cc
leetcode/: CMakeLists.txt
leetcode/core/: binsearch.c  binsearch.h  dfs.c  dfs.h  sliding_window.c  sliding_window.h
leetcode/parser/: CMakeLists.txt  parser.c
leetcode/problems/: 100.c  101.c  104.c  1763.c  219.c  222.c  35.c  594.c  643.c  69.c  94.c
leetcode/tests/: binsearch.c  dfs.c  sliding_window.c
nvim/: init.lua
nvim/lua/: plugins.lua  remap.lua
nvim/lua/plugins/: barbar.lua  cmp.lua  colors.lua  dap.lua  lsp.lua  lualine.lua  mason.lua  telescope.lua  tree.lua  treesitter.lua  undotree.lua
nvim/plugin/: packer_compiled.lua
